# android-dependencies

./: .gitignore  README.md  build_cairo.sh  build_fribidi.sh  buildall.sh  clean-env.sh  env.sh  install.sh
SPIRV-Tools/: .gitignore
cmake/: buildall.sh  buildlib.sh  env.sh
libcairo/: .gitignore  CMakeLists.txt  config.h
libcairo/src/: .gitignore  cairo-features.h
libcurl/: CMakeLists.txt
libexif/: Android.mk  Application.mk  CMakeLists.txt  Makefile  config.h
libexif/libexif/: .gitignore
libexpat/: Android.mk  Application.mk  Makefile
libexpat/expat/: CMakeLists.txt
libfontconfig/: Android.mk  Application.mk  CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in  fontconfig.pc.in  fontconfig.spec  fonts.conf.in
libfontconfig/doc/: FcAtomicCreate.3  FcAtomicDeleteNew.3  FcAtomicDestroy.3  FcAtomicLock.3  FcAtomicNewFile.3  FcAtomicOrigFile.3  FcAtomicReplaceOrig.3  FcAtomicUnlock.3  FcBlanksAdd.3  FcBlanksCreate.3  FcBlanksDestroy.3  FcBlanksIsMember.3  FcCharSetAddChar.3  FcCharSetCopy.3  FcCharSetCount.3  FcCharSetCreate.3  FcCharSetDestroy.3  FcCharSetEqual.3  FcCharSetFirstPage.3  FcCharSetHasChar.3  FcCharSetIntersect.3  FcCharSetIntersectCount.3  FcCharSetIsSubset.3  FcCharSetNextPage.3  FcCharSetSubtract.3  FcCharSetSubtractCount.3  FcCharSetUnion.3  FcConfigAppFontAddDir.3  FcConfigAppFontAddFile.3  FcConfigAppFontClear.3  FcConfigBuildFonts.3  FcConfigCreate.3  FcConfigDestroy.3  FcConfigFilename.3  FcConfigGetBlanks.3  FcConfigGetCache.3  FcConfigGetConfigDirs.3  FcConfigGetConfigFiles.3  FcConfigGetCurrent.3  FcConfigGetFontDirs.3  (+91 more)
libfontconfig/doc/fontconfig-devel/: index.html  r1016.html  r1042.html  r1064.html  r1087.html  r1111.html  r1134.html  r1159.html  r1184.html  r120.html  r1209.html  r1234.html  r1259.html  r1281.html  r1306.html  r1331.html  r1356.html  r1383.html  r141.html  r1414.html  r1437.html  r1460.html  r1486.html  r1515.html  r1545.html  r1575.html  r1608.html  r162.html  r1629.html  r1650.html  r1672.html  r1693.html  r1715.html  r1736.html  r1758.html  r1780.html  r1802.html  r1823.html  r183.html  r1847.html  (+87 more)
libfontconfig/fc-cache/: Makefile.in
libfontconfig/fc-lang/: Makefile.in
libfontconfig/fc-list/: Makefile.in
libfontconfig/fontconfig/: Makefile.in  fcfreetype.h  fontconfig.h
libfontconfig/src/: Makefile.in  fccfg.c  fcdbg.c  fcfreetype.c  fcstr.c
libfontconfig/test/: Makefile.in
libfreetype/: Android.mk  Application.mk  CMakeLists.txt  Makefile
libfreetype/builds/unix/: freetype2.in
libfribidi/: CMakeLists.txt  config.h
libfribidi/lib/: .gitignore  fribidi-unicode-version.h
libgif/: Android.mk  Application.mk  CMakeLists.txt  Makefile  libgif-config.in  libgif.pc.in
libharfbuzz/: Android.mk  Application.mk  CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
libharfbuzz/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
libharfbuzz/src/: harfbuzz.pc.in  hb-ft.cc  hb-subset-cff1.cc
libjpeg-turbo/: Android.mk  Application.mk  CMakeLists.txt  Makefile  jconfigint.h  turbojpeg.c
libpixman/: .gitignore  CMakeLists.txt  config.h
libpixman/pixman/: pixman-version.h
libpng/: Android.mk  Application.mk  CMakeLists.txt  Makefile  pngrutil.c
zlib/: CMakeLists.txt  zlib_pc.in
